--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ section{
 
    
    
-    background: url(./img/main.jpg);
+    background: url(../img/main.jpg);
 
     background-size: cover;
     background-position: center;
@@ -672,7 +672,7 @@ header.sticky{
     position: relative;
     min-height: 100vh;
     width: 100%;
-    background: url(./img/resp.png);
+    background: url(../img/resp.png);
     background-size: cover;
     background-position: center;
     display: flex;
