--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@ section{
    
    
     background: url(../img/main.jpg);
-
+    object-fit: cover;
     background-size: cover;
     background-position: center;
     display: flex;
@@ -673,6 +673,7 @@ header.sticky{
     min-height: 100vh;
     width: 100%;
     background: url(../img/resp.png);
+    object-fit: cover;
     background-size: cover;
     background-position: center;
     display: flex;
